--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,3 @@
-{body;p} 
-{div width 400px}
+body {background-color: #f2dfbf;}
+h2{font-style: oblique;color: #6756bc; font-size: 40px;}
+h1{ background-color: #e2940d;;
